# exam-app

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/client/_app/immutable/chunks/: B8T_c2GK.js  BIUZ16Ln.js  BzlDRkpO.js  CLXvtEyX.js  CTC-l1AL.js  DSmIWiI3.js  Pw6bqfzN.js
.svelte-kit/output/client/_app/immutable/entry/: app.V_HCFGb1.js  start.DrB778a7.js
.svelte-kit/output/client/_app/immutable/nodes/: 0.BaAi7PGN.js  1.CLwjnVny.js  2.CUdI4XaE.js
.svelte-kit/output/prerendered/pages/: index.html
.svelte-kit/output/server/: manifest-full.js  manifest.js
.svelte-kit/output/server/_app/immutable/assets/: _page.B4jbYegM.css
.svelte-kit/output/server/chunks/: index.js  internal.js
.svelte-kit/output/server/entries/pages/: _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
src-tauri/: Cargo.toml  tauri.conf.json  updater_keys  updater_keys.pub
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte
